--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-redux": "^7.2.5",
     "react-router-dom": "^5.3.0",
     "react-scripts": "4.0.3",
+    "react-stepper-horizontal": "^1.0.11",
     "react-table": "^7.7.0",
     "react-toastify": "^8.1.0",
     "redux": "^4.1.1",
